// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cone closed 1`] = `
"v -1.7320508075688774 1 -0.9999999999999996
v -0.8660254037844387 0 -0.4999999999999998
v 0 0 1
v 0 1 2
v -1.7320508075688774 1 -0.9999999999999996
v 0 0 1
v 0 0 0
v 0 0 1
v -0.8660254037844387 0 -0.4999999999999998
v 0 1 0
v -1.7320508075688774 1 -0.9999999999999996
v 0 1 2
v 1.7320508075688767 1 -1.0000000000000009
v 0.8660254037844384 0 -0.5000000000000004
v -0.8660254037844387 0 -0.4999999999999998
v -1.7320508075688774 1 -0.9999999999999996
v 1.7320508075688767 1 -1.0000000000000009
v -0.8660254037844387 0 -0.4999999999999998
v 0 0 0
v -0.8660254037844387 0 -0.4999999999999998
v 0.8660254037844384 0 -0.5000000000000004
v 0 1 0
v 1.7320508075688767 1 -1.0000000000000009
v -1.7320508075688774 1 -0.9999999999999996
v 4.898587196589413e-16 1 2
v 2.4492935982947064e-16 0 1
v 0.8660254037844384 0 -0.5000000000000004
v 1.7320508075688767 1 -1.0000000000000009
v 4.898587196589413e-16 1 2
v 0.8660254037844384 0 -0.5000000000000004
v 0 0 0
v 0.8660254037844384 0 -0.5000000000000004
v 2.4492935982947064e-16 0 1
v 0 1 0
v 4.898587196589413e-16 1 2
v 1.7320508075688767 1 -1.0000000000000009
vn -0.8660254037844388 0 -0.49999999999999983
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 0 1
vn 0 0 1
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 0 1
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0.8660254037844384 0 -0.5000000000000004
vn 0.8660254037844384 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn -0.8660254037844388 0 -0.49999999999999983
vn 0.8660254037844384 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 2.4492935982947064e-16 0 1
vn 2.4492935982947064e-16 0 1
vn 0.8660254037844384 0 -0.5000000000000004
vn 0.8660254037844384 0 -0.5000000000000004
vn 2.4492935982947064e-16 0 1
vn 0.8660254037844384 0 -0.5000000000000004
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
f 1//1 2//2 3//3
f 4//4 5//5 6//6
f 7//7 8//8 9//9
f 10//10 11//11 12//12
f 13//13 14//14 15//15
f 16//16 17//17 18//18
f 19//19 20//20 21//21
f 22//22 23//23 24//24
f 25//25 26//26 27//27
f 28//28 29//29 30//30
f 31//31 32//32 33//33
f 34//34 35//35 36//36
"
`;

exports[`cone open 1`] = `
"v -1.7320508075688774 1 -0.9999999999999996
v -0.8660254037844387 0 -0.4999999999999998
v 0 0 1
v 0 1 2
v -1.7320508075688774 1 -0.9999999999999996
v 0 0 1
v 1.7320508075688767 1 -1.0000000000000009
v 0.8660254037844384 0 -0.5000000000000004
v -0.8660254037844387 0 -0.4999999999999998
v -1.7320508075688774 1 -0.9999999999999996
v 1.7320508075688767 1 -1.0000000000000009
v -0.8660254037844387 0 -0.4999999999999998
v 4.898587196589413e-16 1 2
v 2.4492935982947064e-16 0 1
v 0.8660254037844384 0 -0.5000000000000004
v 1.7320508075688767 1 -1.0000000000000009
v 4.898587196589413e-16 1 2
v 0.8660254037844384 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 0 1
vn 0 0 1
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 0 1
vn 0.8660254037844384 0 -0.5000000000000004
vn 0.8660254037844384 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn -0.8660254037844388 0 -0.49999999999999983
vn 0.8660254037844384 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn 2.4492935982947064e-16 0 1
vn 2.4492935982947064e-16 0 1
vn 0.8660254037844384 0 -0.5000000000000004
vn 0.8660254037844384 0 -0.5000000000000004
vn 2.4492935982947064e-16 0 1
vn 0.8660254037844384 0 -0.5000000000000004
f 1//1 2//2 3//3
f 4//4 5//5 6//6
f 7//7 8//8 9//9
f 10//10 11//11 12//12
f 13//13 14//14 15//15
f 16//16 17//17 18//18
"
`;

exports[`cone radiusEnd is zero & closed 1`] = `
"v 0 1 0
v -0.8660254037844387 0 -0.4999999999999998
v 0 0 1
v 0 0 0
v 0 0 1
v -0.8660254037844387 0 -0.4999999999999998
v 0 1 0
v 0.8660254037844384 0 -0.5000000000000004
v -0.8660254037844387 0 -0.4999999999999998
v 0 0 0
v -0.8660254037844387 0 -0.4999999999999998
v 0.8660254037844384 0 -0.5000000000000004
v 0 1 0
v 0 0 1
v 0.8660254037844384 0 -0.5000000000000004
v 0 0 0
v 0.8660254037844384 0 -0.5000000000000004
v 0 0 1
vn 0 1 0
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 0 1
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0.8660254037844384 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0 0 1
vn 0.8660254037844384 0 -0.5000000000000004
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
f 1//1 2//2 3//3
f 4//4 5//5 6//6
f 7//7 8//8 9//9
f 10//10 11//11 12//12
f 13//13 14//14 15//15
f 16//16 17//17 18//18
"
`;

exports[`cone radiusEnd is zero & open 1`] = `
"v 0 1 0
v -0.8660254037844387 0 -0.4999999999999998
v 0 0 1
v 0 1 0
v 0.8660254037844384 0 -0.5000000000000004
v -0.8660254037844387 0 -0.4999999999999998
v 0 1 0
v 0 0 1
v 0.8660254037844384 0 -0.5000000000000004
vn 0 1 0
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 0 1
vn 0 1 0
vn 0.8660254037844384 0 -0.5000000000000004
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 1 0
vn 0 0 1
vn 0.8660254037844384 0 -0.5000000000000004
f 1//1 2//2 3//3
f 4//4 5//5 6//6
f 7//7 8//8 9//9
"
`;

exports[`cone radiusStart is zero & closed 1`] = `
"v 0 0 0
v 0 1 1
v -0.8660254037844387 1 -0.4999999999999998
v 0 1 0
v -0.8660254037844387 1 -0.4999999999999998
v 0 1 1
v 0 0 0
v -0.8660254037844387 1 -0.4999999999999998
v 0.8660254037844384 1 -0.5000000000000004
v 0 1 0
v 0.8660254037844384 1 -0.5000000000000004
v -0.8660254037844387 1 -0.4999999999999998
v 0 0 0
v 0.8660254037844384 1 -0.5000000000000004
v 0 1 1
v 0 1 0
v 0 1 1
v 0.8660254037844384 1 -0.5000000000000004
vn 0 -1 0
vn 0 0 1
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn -0.8660254037844388 0 -0.49999999999999983
vn 0.8660254037844384 0 -0.5000000000000004
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0.8660254037844384 0 -0.5000000000000004
vn 0 0 1
vn 0 1 0
vn 0 1 0
vn 0 1 0
f 1//1 2//2 3//3
f 4//4 5//5 6//6
f 7//7 8//8 9//9
f 10//10 11//11 12//12
f 13//13 14//14 15//15
f 16//16 17//17 18//18
"
`;

exports[`cone radiusStart is zero & open 1`] = `
"v 0 0 0
v 0 1 1
v -0.8660254037844387 1 -0.4999999999999998
v 0 0 0
v -0.8660254037844387 1 -0.4999999999999998
v 0.8660254037844384 1 -0.5000000000000004
v 0 0 0
v 0.8660254037844384 1 -0.5000000000000004
v 0 1 1
vn 0 -1 0
vn 0 0 1
vn -0.8660254037844388 0 -0.49999999999999983
vn 0 -1 0
vn -0.8660254037844388 0 -0.49999999999999983
vn 0.8660254037844384 0 -0.5000000000000004
vn 0 -1 0
vn 0.8660254037844384 0 -0.5000000000000004
vn 0 0 1
f 1//1 2//2 3//3
f 4//4 5//5 6//6
f 7//7 8//8 9//9
"
`;
